# perovskites-for-co2rr

./: README.md  environment.yml  pyproject.toml
0_adsorption-with-cp2k/: 0_create-bulk.ipynb  1_generate-surfaces.ipynb  2_relax-surfaces.py
0_relax-bulk/: 0_relax-bulk.py  1_test-supercell-size.ipynb  2_relax-atoms.py  3_prepare-dilute-cells.ipynb  4_compute-pdos.py  5_evaluate-band-structure.ipynb  6_get-charges.ipynb  7_compute-features.ipynb  README.md
1_prepare-surfaces/: 0_create-bulk.ipynb  0_generate-surfaces.ipynb  1_generate-surfaces.ipynb  1_relax-surfaces.py  2_relax-surfaces.py
2_adsorption-calculations/: 0_prepare-geometries.ipynb  1_relax-surfaces.py  2_consolidate-adsorption-results.ipynb  3_compute-features.ipynb  README.md
2_adsorption-calculations/co2-molecule/: README.md  co2.json  get-molecule-energy.ipynb
co2rr/: bader.py  cp2k.py  cp2k_old.py  emery.py  pwscf.py
